Fix comment mark and unpublished not showing when titles are hidden, add role to node article

--- a/at_generator/components/starterkit/styles/css/components/comments.css
+++ b/at_generator/components/starterkit/styles/css/components/comments.css
@@ -15,6 +15,29 @@
 .comment:after {
   clear: both;
 }
+.comment__title--visually-hidden {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 21px;
+  line-height: 1.3125rem;
+}
+.comment__title--visually-hidden .permalink {
+  position: absolute !important;
+  clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  height: 1px;
+  width: 1px;
+  padding: 0;
+  word-wrap: normal;
+  font: 0/0 a;
+}
+.comment__title--visually-hidden .marker {
+  float: right;
+  margin-left: 4px;
+  margin-left: 0.25rem;
+}
 .comment p:last-of-type {
   margin-bottom: 0;
 }
@@ -119,4 +142,5 @@
   margin-left: 42px;
   margin-left: 2.625rem;
 }
+
 /*# sourceMappingURL=maps/comments.css.map */
